wap_supplicant specific changes

--- a/samples/esp_wifi/prj.conf
+++ b/samples/esp_wifi/prj.conf
@@ -1,6 +1,7 @@
-CONFIG_HEAP_MEM_POOL_SIZE=16384
-CONFIG_HEAP_MEM_POOL_MIN_SIZE=1
+CONFIG_HEAP_MEM_POOL_SIZE=65536
+CONFIG_HEAP_MEM_POOL_MIN_SIZE=32000
 CONFIG_POSIX_API=y
 CONFIG_PTHREAD_IPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_DYNAMIC_INTERRUPTS=y
+CONFIG_MBEDTLS=y
