--- a/samples/esp_wifi/prj.conf
+++ b/samples/esp_wifi/prj.conf
@@ -5,3 +5,27 @@ CONFIG_PTHREAD_IPC=y
 CONFIG_POSIX_MQUEUE=y
 CONFIG_DYNAMIC_INTERRUPTS=y
 CONFIG_MBEDTLS=y
+
+CONFIG_NETWORKING=y
+CONFIG_NET_IPV6=n
+CONFIG_NET_IPV4=y
+CONFIG_NET_ARP=y
+CONFIG_NET_UDP=y
+CONFIG_NET_DHCPV4=y
+
+CONFIG_INIT_STACKS=y
+
+CONFIG_NET_MGMT=y
+CONFIG_NET_MGMT_EVENT=y
+
+#CONFIG_NET_LOG=y
+#CONFIG_LOG=y
+
+#CONFIG_SLIP_STATISTICS=n
+#CONFIG_NET_SHELL=y
+
+CONFIG_NET_L2_ETHERNET=y
+CONFIG_ETH_STELLARIS=y
+
+#CONFIG_ETH_NATIVE_POSIX=y
+#CONFIG_ETH_NATIVE_POSIX_MAC_ADDR="00:00:5e:00:53:2a"
