--- a/samples/net/dhcpv4_client/prj.conf
+++ b/samples/net/dhcpv4_client/prj.conf
@@ -12,8 +12,18 @@ CONFIG_INIT_STACKS=y
 CONFIG_NET_MGMT=y
 CONFIG_NET_MGMT_EVENT=y
 
-CONFIG_NET_LOG=y
-CONFIG_LOG=y
 
 CONFIG_SLIP_STATISTICS=n
 CONFIG_NET_SHELL=y
+
+CONFIG_HEAP_MEM_POOL_SIZE=65536
+CONFIG_HEAP_MEM_POOL_MIN_SIZE=32000
+CONFIG_POSIX_API=y
+CONFIG_PTHREAD_IPC=y
+CONFIG_POSIX_MQUEUE=y
+CONFIG_DYNAMIC_INTERRUPTS=y
+CONFIG_MBEDTLS=y
+CONFIG_NET_L2_ETHERNET=y
+CONFIG_WIFI=y
+CONFIG_WIFI_ESP32=y
+CONFIG_NET_DHCPV4_INITIAL_DELAY_MAX=2
