--- a/samples/net/dhcpv4_client/prj.conf
+++ b/samples/net/dhcpv4_client/prj.conf
@@ -27,3 +27,7 @@ CONFIG_NET_L2_ETHERNET=y
 CONFIG_WIFI=y
 CONFIG_WIFI_ESP32=y
 CONFIG_NET_DHCPV4_INITIAL_DELAY_MAX=2
+
+CONFIG_MBEDTLS_ENTROPY_ENABLED=y
+CONFIG_MBEDTLS_KEY_EXCHANGE_ECDHE_ECDSA_ENABLED=y
+CONFIG_MBEDTLS_ECP_ALL_ENABLED=y
